--- a/.github/workflows/IIS-deploy.yml
+++ b/.github/workflows/IIS-deploy.yml
@@ -1,6 +1,5 @@
 name: React Vite → IIS (Auto-Create Site + Backup + Rollback)
 
-
 on:
   push:
     branches: [ main ]
@@ -55,16 +54,16 @@ jobs:
         cache: 'npm'
 
     - name: Install & Build
+      shell: cmd
       run: |
         npm ci
         npm run build
-      shell: cmd
 
-    # 3. MANUAL APPROVAL - FIXED ✅
+    # 3. MANUAL APPROVAL
     - name: Wait for Deployment Approval
       uses: trstringer/manual-approval@v1
       with:
-        secret: ${{ github.TOKEN }}
+        secret: ${{ secrets.GITHUB_TOKEN }}
         approvers: sharath
         minimum-approvals: 1
         issue-title: "🚀 Deploy React App to IIS"
@@ -87,30 +86,34 @@ jobs:
         $buildPath = "$PWD\dist"
 
         Stop-WebAppPool -Name $appPoolName
-        Remove-Item $deployPath\* -Recurse -Force -ErrorAction SilentlyContinue
-        Copy-Item $buildPath\* $deployPath -Recurse -Force
+        Remove-Item "$deployPath\*" -Recurse -Force -ErrorAction SilentlyContinue
+        Copy-Item "$buildPath\*" $deployPath -Recurse -Force
 
         $webConfigPath = "$deployPath\web.config"
         Remove-Item $webConfigPath -ErrorAction SilentlyContinue
-        Add-Content -Path $webConfigPath -Value '<?xml version="1.0"?>'
-        Add-Content -Path $webConfigPath -Value '<configuration>'
-        Add-Content -Path $webConfigPath -Value '  <system.webServer>'
-        Add-Content -Path $webConfigPath -Value '    <rewrite>'
-        Add-Content -Path $webConfigPath -Value '      <rules>'
-        Add-Content -Path $webConfigPath -Value '        <rule name="React Routes" stopProcessing="true">'
-        Add-Content -Path $webConfigPath -Value '          <match url=".*" />'
-        Add-Content -Path $webConfigPath -Value '          <conditions logicalGrouping="MatchAll">'
-        Add-Content -Path $webConfigPath -Value '            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />'
-        Add-Content -Path $webConfigPath -Value '          </conditions>'
-        Add-Content -Path $webConfigPath -Value '          <action type="Rewrite" url="index.html" />'
-        Add-Content -Path $webConfigPath -Value '        </rule>'
-        Add-Content -Path $webConfigPath -Value '      </rules>'
-        Add-Content -Path $webConfigPath -Value '    </rewrite>'
-        Add-Content -Path $webConfigPath -Value '  </system.webServer>'
-        Add-Content -Path $webConfigPath -Value '</configuration>'
+
+        $webConfig = [string]::Join("`n", @(
+          '<?xml version="1.0"?>',
+          '<configuration>',
+          '  <system.webServer>',
+          '    <rewrite>',
+          '      <rules>',
+          '        <rule name="React Routes" stopProcessing="true">',
+          '          <match url=".*" />',
+          '          <conditions logicalGrouping="MatchAll">',
+          '            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />',
+          '          </conditions>',
+          '          <action type="Rewrite" url="index.html" />',
+          '        </rule>',
+          '      </rules>',
+          '    </rewrite>',
+          '  </system.webServer>',
+          '</configuration>'
+        ))
+
+        Set-Content -Path $webConfigPath -Value $webConfig -Encoding UTF8
         Start-WebAppPool -Name $appPoolName
         Write-Output "✅ Deployed!"
-
 
     # 5. HEALTH CHECK
     - name: Verify Deployment
@@ -118,17 +121,19 @@ jobs:
       run: |
         $deployPath = "C:\inetpub\wwwroot\MyReactApp"
         $backupPath = "${{ env.BACKUP_PATH }}"
-        $siteUrl = "http://localhost:8080"
+        $siteUrl    = "http://localhost:8080"
 
         Start-Sleep -Seconds 3
 
-        if (-not (Test-Path "$deployPath\index.html")) {
+        if (-not (Test-Path (Join-Path $deployPath 'index.html'))) {
           throw "❌ index.html missing"
         }
 
-        $response = Invoke-WebRequest -Uri $siteUrl -TimeoutSec 20 -UseBasicParsing
-        if ($response.StatusCode -ne 200) { throw "HTTP $($response.StatusCode)" }
+        try {
+          $response = Invoke-WebRequest -Uri $siteUrl -TimeoutSec 20 -UseBasicParsing
+        } catch {
+          throw "❌ Health check failed: $($_.Exception.Message)"
+        }
 
-        Write-Output "✅ SUCCESS! http://localhost:8080 is live"
+        Write-Output "✅ SUCCESS! $siteUrl is live"
 
- 
