--- a/.github/workflows/IIS-deploy.yml
+++ b/.github/workflows/IIS-deploy.yml
@@ -1,4 +1,4 @@
-name: React Vite → IIS (Auto-Create Site + Backup + Rollback)
+name: React Vite to IIS (Auto-Create Site + Backup + Rollback)
 
 on:
   push:
@@ -21,30 +21,30 @@ jobs:
         $appPoolName = "MyReactAppPool"
         $backupPath = "C:\inetpub\wwwroot\backups\MyReactAppbackup$(Get-Date -Format 'yyyyMMddHHmmss')"
 
-        New-Item -ItemType Directory -Force -Path "C:\inetpub\wwwroot\backups"
+        New-Item -ItemType Directory -Force -Path "C:\inetpub\wwwroot\backups" -ErrorAction SilentlyContinue
+        New-Item -ItemType Directory -Force -Path $deployPath -ErrorAction SilentlyContinue
 
         if (Get-Website -Name $siteName -ErrorAction SilentlyContinue) {
-          Write-Output "✅ Site '$siteName' exists"
+          Write-Output "Site '$siteName' exists"
           if (Test-Path $deployPath) {
             Copy-Item $deployPath $backupPath -Recurse -Force
-            Write-Output "✅ Backup: $backupPath"
+            Write-Output "Backup created: $backupPath"
             echo "BACKUPPATH=$backupPath" >> $env:GITHUB_ENV
           }
           echo "SITEEXISTS=true" >> $env:GITHUB_ENV
         } else {
-          Write-Output "🆕 Creating site '$siteName'..."
+          Write-Output "Creating site '$siteName'..."
 
           $poolExists = Get-ChildItem IIS:\AppPools | Where-Object { $_.Name -eq $appPoolName }
           if (-not $poolExists) {
             New-WebAppPool -Name $appPoolName
-            Write-Output "✅ App Pool created"
+            Write-Output "App Pool created"
           } else {
-            Write-Output "✅ App Pool already exists"
+            Write-Output "App Pool already exists"
           }
 
-          New-Item -ItemType Directory -Force -Path $deployPath
           New-Website -Name $siteName -Port 8080 -PhysicalPath $deployPath -ApplicationPool $appPoolName
-          Write-Output "✅ Site created on port 8080"
+          Write-Output "Site created on port 8080"
           echo "SITEEXISTS=false" >> $env:GITHUB_ENV
         }
 
@@ -64,7 +64,7 @@ jobs:
         npm ci
         npm run build
 
-   # 3. DEPLOY
+    # 3. DEPLOY
     - name: Deploy New App
       shell: powershell
       run: |
@@ -77,9 +77,9 @@ jobs:
         $poolState = (Get-WebAppPoolState -Name $appPoolName).Value
         if ($poolState -ne "Stopped") {
           Stop-WebAppPool -Name $appPoolName
-          Write-Output "✅ App Pool stopped"
+          Write-Output "App Pool stopped"
         } else {
-          Write-Output "ℹ️ App Pool already stopped"
+          Write-Output "App Pool already stopped"
         }
 
         Remove-Item "$deployPath\*" -Recurse -Force -ErrorAction SilentlyContinue
@@ -108,9 +108,8 @@ jobs:
         ))
 
         Set-Content -Path $webConfigPath -Value $webConfig -Encoding UTF8
-
         Start-WebAppPool -Name $appPoolName
-        Write-Output "✅ Deployed!"
+        Write-Output "Deployed successfully!"
 
     # 4. HEALTH CHECK
     - name: Verify Deployment
@@ -122,10 +121,10 @@ jobs:
         Start-Sleep -Seconds 3
 
         if (-not (Test-Path "$deployPath\index.html")) {
-          throw "❌ index.html missing"
+          throw "index.html missing - deployment failed"
         }
 
         $response = Invoke-WebRequest -Uri $siteUrl -TimeoutSec 20 -UseBasicParsing
-        if ($response.StatusCode -ne 200) { throw "❌ HTTP $($response.StatusCode)" }
+        if ($response.StatusCode -ne 200) { throw "HTTP $($response.StatusCode) - deployment failed" }
 
-        Write-Output "✅ SUCCESS! http://localhost:8080 is live"
+        Write-Output "SUCCESS - http://localhost:8080 is live"
