--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poc-1",
-  "proxy": "https://localhost:7291",
+  "proxy": "http://localhost:8081",
   "private": true,
   "version": "0.0.0",
   "type": "module",
